Fix execution count and clean up print statements in Jupyter notebook for Assignment 1

--- a/Assignment 1/Assignment 1 (25-07-2025).ipynb
+++ b/Assignment 1/Assignment 1 (25-07-2025).ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b1f0faf",
    "metadata": {},
    "outputs": [
@@ -30,8 +30,7 @@
     "a=np.zeros(5)\n",
     "print(a,a.dtype)\n",
     "b=a.astype(np.int32)\n",
-    "print(b,b.dtype)\n",
-    "\n"
+    "print(b,b.dtype)"
    ]
   },
   {
