Update execution counts and clean up print statements in Jupyter notebook for Assignment 1

--- a/Assignment 1/Assignment 1 (25-07-2025).ipynb
+++ b/Assignment 1/Assignment 1 (25-07-2025).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ee9b58dc",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b1f0faf",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "eb74fce6",
    "metadata": {},
    "outputs": [
@@ -51,13 +51,12 @@
    ],
    "source": [
     "c = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 0, 1, 2]])\n",
-    "print(c,c.shape,c.dtype)\n",
-    "\n"
+    "print(c,c.shape,c.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "52fdd002",
    "metadata": {},
    "outputs": [
